tests/lang/compile_fail/generic_method_body_mismatch.koja
struct Counter
  value: Int
end

extend Counter
  fn bad<U>(self) -> U
    self.value + "string"
  end
end

fn main
  c = Counter{value: 1}
  c.value.print()
end
